Make the current conditions icon a little larger and give it negative margins to prevent big gaps

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,6 +107,12 @@ p#description {
     border-radius: 10px; 
 }
 
+#conditions-image {
+    width: 8rem;
+    object-fit: cover;
+    margin: -1.5rem;
+}
+
 @media screen and (max-width: 576px) {
     .left-pane,
     .right-pane,
